--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
         <h1>Plant Project</h1>
         <hr>
 
-        <p> Im not sure what I am doing</p>
+        <p>it worked!</p>
     </body>
 </html>
