--- a/plants_i_have.html
+++ b/plants_i_have.html
@@ -10,20 +10,22 @@
         <h1>Plants I have</h1>
         
         <div class="container">
-            <img src="photos/an.png">
-            <img src="photos/fuzzy.png">
-            <img src="photos/gigas.png">
-            <img src="photos/glorysum.png">
-            <img src="photos/micans">
-            <img src="photos/monster.png">
-            <img src="photos/monsterthai.png">
-            <img src="photos/pilea.png">
-            <img src="photos/pp.png">
-            <img src="photos/splendid.png">
-            <img src="photos/tortum.png">
-            <img src="photos/wp.png">
-            <img src="photos/zz.png">
-        </div>
+            <div class="image-container">
+              <img src="photos/fuzzy.png">
+              <img src="photos/splendid.png">
+              <img src="photos/gigas.png">
+              <img src="photos/glorysum.png">
+              <img src="photos/micans.png">
+              <img src="photos/pp.png">
+              <img src="photos/wp.png">
+              <img src="photos/tortum.png">
+              <img src="photos/monster.png">
+              <img src="photos/monsterthai.png">
+              <img src="photos/an.png">
+              <img src="photos/zz.png"> 
+              <img src="photos/pilea.png">
+            </div>
+          </div>
         
     </body>
 </html>
