--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     </head>
 
     <body>
-        <h1>Plant Project</h1>
-        <hr>
-
         
+        <div class="navigation">
+         <div></div>
+            <a href="plants_i_have.html"></a>
+            <a href="plants_i_want.html"></a>
+            <a href="plant_plan_future.html"></a>
+         </div>
+        </div>
+
     </body>
 </html>
