--- a/plants_i_have.html
+++ b/plants_i_have.html
@@ -7,7 +7,8 @@
     </head>
 
     <body>
-        <h1>Plants I have</h1>
+
+        <h1 class="plants">Plants I have</h1>
         
         <div class="container">
             <div class="image-container">
