site map created, foundations created

--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
 
     <body>
         
-        <div class="navigation">
-         <div></div>
-            <a href="plants_i_have.html"></a>
-            <a href="plants_i_want.html"></a>
-            <a href="plant_plan_future.html"></a>
-         </div>
+        <div class="title">
+            <h1>My Plant Collection</h1>
         </div>
 
     </body>
