add some more content

--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
             <h1>My Plant Collection</h1>
         </div>
 
+        <div class="welcome">
+            <p>Welcome to my Plant Collection page, this is where I will use HTML and now CSS</p>
+        </div>
+
+        
+
     </body>
 </html>
