finishing touches , next up is inspo for plants & future

--- a/plants_i_want.html
+++ b/plants_i_want.html
@@ -5,10 +5,41 @@
         <title> Plants I Want</title>
         <link rel="stylesheet" href="style.css">
     </head>
+    <!--found this method of removing bullet holes on my UL's/OL's - not sure if its entirely professional to do so but I will continue until better methods are learned -->
+    <style>
+        ul {
+            list-style-type: none;
+        }
+    </style>
 
     <body>
 
+        <div class="tldr">
 
+            <h1>Plants I Want</h1>
 
+            <p><strong>Okay I was going to make this page have a cool layout with photos and descriptions but I think that would be better on version 3.0.... Anyways, below is a list of plants I do want and eventually will have in my possesion.</strong></p>
+
+            <hr>
+            <!--is this correct formatting for my lists?-->
+            <ul>
+                <li>Creeping Peperomia</li>
+                <li>Varigated Monstera Albo <strong>Whatever its called</strong></li>
+                <li>Black Gold Philodendron</li>
+                <li>Epipremunum 'Cebu Blue'</li>
+                <li>Philodendron Glorious</li>
+                <li>Variety of Caletheas <strong>I want Calethea bouquets around my home/apartment</strong></li>
+                <li>Variety of Pothos <strong>I want to have some hanging plants so I figure I will just collect all the cool Pothos I find and have an overhead rainforest😍</strong></li>
+
+                <hr>
+
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="plants_i_have.html">Plants I Have</a></li>
+                    <li><a href="plant_plan_future.html">Plants & My Future</a></li>
+                </ul>
+            </ul>
+
+        </div>
     </body>
 </html>
