last touches on site, seeking more content before making another

--- a/plant_plan_future.html
+++ b/plant_plan_future.html
@@ -5,8 +5,34 @@
         <title>Plants & Beyond</title>
         <link rel="stylesheet" href="style.css">
     </head>
+    <!-- It always feels weird to me that I use someone elses code online, even when its proven and true for the issue I have. I understand to not reinvent the wheel, but maybe its because I am still a beginner and need more time to realize I dont have enough time to learn it all-->
+    <style>
+        ul {
+            list-style-type: none;
+        }
+    </style>
 
     <body>
+        <!--I feel like I'm making too many classes or putting them together wrong? Is there a right way to do anything or are there several solutions I could use here and @ a worksite?-->
+        <div class="future">
+            <h1>Plants & the Future</h1>
+
+            <p><strong>Okay</strong>, so honestly I was going to make such a nice gallery of inspirational pictures of houseplant setups from people all over the internet. 
+
+            <p>I admit, there are some amazing inspo photos that I have stashed away in one of my desktop folders.</p> 
         
+            <p><strong>Who knows?</strong> Maybe I will obtain a job faster than I anticipated with my planning & maybe then, I can make have everything I need to have as many plants as I want!</p>
+
+            <p>Unfortunately, as I mentioned above, I will be moving onto another part of my studies w/ development but may just come back to this eventually.</p>
+
+            <p>Until then, take care!</p>
+
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="plants_i_want.html">Plants I Want</a></li>
+                <li><a href="plants_i_have.html">Plants I Have</a></li>
+            </ul>
+
+        </div>
     </body>
 </html>
